--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.mavenweb</groupId>
   <artifactId>mvnwebapp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>mvnwebapp Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
